src/styles.scss
@use '@angular/material' as mat;
@use './app/shared/styles/variables' as *;
@use './app/shared/styles/mixins' as *;
@use './app/shared/styles/m3-theme' as *;
@use './app/shared/styles/reset' as *;
@include mat.core();

@font-face {
    font-family: 'Inter-Fallback';
    src: local('Arial');
    ascent-override: 90%;
    descent-override: 22.5%;
    line-gap-override: 0%;
    size-adjust: 107.5%;
}

.body-lock {
    overflow: hidden;
    touch-action: none;
}

html {
    min-height: 100%;
    font-size: 62.5%;
    overflow-x: hidden;
}

body,
html,
* {
    font-family: 'Inter', 'Inter-Fallback', sans-serif;
}

body {
    @include mat.all-component-themes($neonum-theme);
    background-color: var(--nn-bg);
    color: var(--nn-text);
    font: var(--mat-sys-body-medium);
    margin: 0;
    min-height: 100%;
    font-size: 1.6rem;
    color-scheme: dark;
    overflow-x: hidden;
}

h1 {
    font-size: 3.2rem;
    font-weight: 700;
}
h2 {
    font-size: 2.4rem;
    font-weight: 600;
}
p {
    font-size: 1.6rem;
    line-height: 1.6;
}

.nn-container {
    max-width: 120rem;
    margin: 0 auto;
    padding: 0 var(--nn-space-md);
}

